--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "bitsmind/graphsql": "^2.0",
         "inertiajs/inertia-laravel": "^2.0",
+        "kreait/laravel-firebase": "^6.1",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
